manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 1

  selector:
    matchLabels:
      app: web-app

  template:
    metadata:
      labels:
        app: web-app

    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine

          ports:
            - name: nginx-http
              containerPort: 80

          volumeMounts:
            - name: web-content
              mountPath: /usr/share/nginx/html
              readOnly: true

        - name: multitool
          image: wbitt/network-multitool:latest

          ports:
            - name: multitool-http
              containerPort: 8080

            - name: multitool-https
              containerPort: 8443

      volumes:
        - name: web-content
          configMap:
            name: web-content

---
apiVersion: v1
kind: Service
metadata:
  name: web-app
spec:
  selector:
    app: web-app

  ports:
    - name: http
      port: 80
      targetPort: nginx-http

  type: ClusterIP
